# consumer_mega_brain

./: .env.example  .gitignore  Procfile  README.md  main.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  run_webapp.py
ai/: base.py  claude_provider.py  openai_provider.py  prompts.py
analysis/: pipeline.py
collectors/: amazon.py  base.py  google_maps.py  instagram.py  playwright_utils.py  quora.py  reddit.py  trustpilot.py  walmart.py  youtube.py
config/: settings.py
exporters/: base.py  csv_export.py  excel.py  markdown.py  powerpoint.py
models/: schemas.py
webapp/: app.py  jobs.py
webapp/static/: index.html
